refactor(common): 重构通用工具类结构和功能
- 将 Result 和 PageResult 类移动到新的 data 包路径下
- 更新 BaseController 中的 Result 导入路径
- 删除 BaseEvent 中的 traceId 属性定义和相关代码
- 添加 StreamUtils 工具类提供流操作功能
- 删除 PageQuery 和 TableDataInfo 类
- 简化 WebUtils 类的请求参数处理方法
- 优化 Result 类的静态方法实现
- 更新 FallbackAspect 中的 Result 导入路径
- 删除登录和操作日志事件中的 traceId 字段